# ai-literacy-superpowers

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  HARNESS.md  MODEL_ROUTING.md  ONBOARDING.md  README.md  REFLECTION_LOG.md  mkdocs.yml
tdad_tests/: README.md  conftest.py  pyproject.toml
tdad_tests/layer0_deterministic/: test-affordance-check.sh  test-affordance-invocations.sh  test-affordance-recorder.sh  test-affordance-staleness.sh  test-affordances-template.sh  test-archive-promoted-reflections.sh  test-auto-enforcer.sh  test-inv1-firewall.sh  test-reflection-log-helpers.sh  test-sentinel-integrity.sh  test-update-health-badge.sh  test-workflow-templates.sh
tdad_tests/layer0_deterministic/fixtures/inv-firewall/: inv1-clean.workflow.js  inv1-concat.workflow.js  inv1-violation.workflow.js  inv2-clean.workflow.js  inv2-multiline.workflow.js  inv2-order.workflow.js  inv2-unterminated.workflow.js  inv2-uppercase-markers.workflow.js  inv2-uppercase.workflow.js  inv2-violation.workflow.js
tdad_tests/runner/: plugin.py
tdad_tests/scenarios/agents/advocatus-diaboli/: declares-rubric-bearing-adversary-role.md
tdad_tests/scenarios/agents/assessor/: declares-output-invariant-and-inv1-precision.md  declares-threshold-and-deep-research-shape.md  runtime-fans-out-by-area-with-verification.md
tdad_tests/scenarios/agents/carpaccio/: atomic-task.md  mixed-independence.md  multi-decision-task.md  revise-redispatch.md  selectivity-respected.md  vague-task-falls-back.md
tdad_tests/scenarios/agents/code-reviewer/: declares-claude-code-scope-and-propose-only.md  declares-per-property-verifiers-synthesised.md  declares-separate-context-and-non-trivial-trigger.md  runtime-runs-in-separate-context-window.md
tdad_tests/scenarios/agents/cost-estimator/: ambiguous-target-disclosed.md  binding-drift-degrades.md  blended-rate-skew-surfaced.md  classifies-target-kind.md  emits-conforming-record.md  empty-snapshot-not-refused.md  inference-basis-disclosed.md  per-stage-cost-bands.md  refuses-ungroundable-target.md  tool-boundary-and-charter.md
tdad_tests/tests/: test_assess_operational_axes.py  test_command_skill_coverage.py  test_diagnostic_legibility_structural.py  test_layer0_deterministic.py  test_layer1_structural.py  test_s3_enforcer_fanout_structural.py  test_s4_adversarial_deepresearch_structural.py  test_s5_orchestrator_routing_structural.py  test_s6_reflection_mining_structural.py  test_s7_docs_hook_copilot_structural.py
(+371 files in other folders)
